Feature/tailscale vpn (#12)
* Tailscale VPN Node:
 - implement initial version of the solution.

* Tailscale VPN Node:
 - rename OpenVPN to Tailscale in GH Actions, CF Template

* Tailscale VPN Node:
 - fix parameter for AllowAuthTokenSecretAccess.

* Tailscale VPN Node:
 - fix entry command in the Dockerfile.

* Tailscale VPN Node:
 - remove hostname from tailscaled command.

* Tailscale VPN Node:
 - add yum cache cleanup command to the Dockerfile.

* Tailscale VPN Node:
 - add loglevel error to tailscaled to reduce number of logs.

* Tailscale VPN Node:
 - add debug print to monitor_connections.sh.

* Tailscale VPN Node:
 - disable logging

* Tailscale VPN Node:
 - fix connections check command

* Tailscale VPN Node:
 - add tailscale logout before container exit

* Tailscale VPN Node:
 - add region to stack output file path

* Tailscale VPN Node:
 - do not replicate secret to all deploying region, just keep it within the config region;
 - add stack-output-parameters.json clean up on ECS Stack deletion.

* Tailscale VPN Node:
 - add the missing CF parameter.

* Tailscale VPN Node:
 - add ECS Cluster Name to ecs-vpn-server.yml

* Tailscale VPN Node:
 - add a component to load ECS Task configuration from S3.

* Tailscale VPN Node:
 - add initial implementation of Tailscale ECS based Lambda.
 - add missing permissions to the lambda, switch it to the new implementation.

* Tailscale VPN Node:
 - fix some issues with build;
 - update pom version;
 - add workflow dispatch for Lambda CI-CD pipeline.

* Tailscale VPN Node:
 - add dynamic jar version evaluation to Lambda CI-CD.

* Tailscale VPN Node:
 - fix yaml config issues.

* Tailscale VPN Node:
 - fix yaml config issues.

* Tailscale VPN Node:
 - fix some errors in /runNode command.

* Tailscale VPN Node:
 - fix some errors in /runNode command.

* Tailscale VPN Node:
 - add ecs:TagResource permission to the lambda.

* Tailscale VPN Node:
 - add IAM Pass role for the ECS role.

* Tailscale VPN Node:
 - fix some errors.
